changed inventory posting to product posting (condition)

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,14 +6,13 @@
             "request": "launch",
             "type": "al",
             "environmentType": "Sandbox",
-            "environmentName": "Sandbox",
+            "environmentName": "sandbox",
             "startupObjectId": 22,
             "startupObjectType": "Page",
             "breakOnError": "All",
             "launchBrowser": true,
             "enableLongRunningSqlStatements": true,
-            "enableSqlInformationDebugger": true,
-            "schemaUpdateMode": "Synchronize"
+            "enableSqlInformationDebugger": true
         }
     ]
 }
