--- a/app.json
+++ b/app.json
@@ -2,9 +2,9 @@
   "id": "2f961722-afe5-4c4d-80dc-e390117770a0",
   "name": "Perfion Items",
   "publisher": "Abilene",
-  "version": "1.0.0.42",
+  "version": "1.0.0.51",
   "brief": "",
-  "description": "API Query to expose items to Perfion",
+  "description": "Integration for syncing between Perfion, BC, and Magento",
   "privacyStatement": "",
   "EULA": "",
   "help": "",
@@ -21,19 +21,19 @@
       "id": "a8c19647-b664-4902-a66a-c9f19da9121e",
       "publisher": "Lanham Associates",
       "name": "Lanham Demand Planning",
-      "version": "23.3.5.10"
+      "version": "23.3.5.14"
     },
     {
       "id": "13dd0d55-3340-471c-8cfe-8880a5147313",
       "publisher": "Synoptek - DM/RJ",
       "name": "DropShipment_Boolean_onItem&VendorMaster",
-      "version": "1.0.0.41"
+      "version": "1.0.0.42"
     },
     {
       "id": "d7bbc6a6-546f-477c-8460-8eb418f111dc",
       "publisher": "Abilene",
       "name": "Abilene SOD",
-      "version": "1.0.0.182"
+      "version": "1.0.0.187"
     },
     {
       "id": "48f56295-5ad7-4acd-9171-01c47b2d386e",
@@ -45,12 +45,12 @@
       "id": "4016f542-d919-496e-b800-a5129bfcadce",
       "publisher": "SSI",
       "name": "Sales orderLine–AssemblyItems",
-      "version": "1.0.0.31"
+      "version": "1.0.0.34"
     },
     {
       "id": "c38e7687-5ff2-4ac4-8c66-4b384e0d80e4",
       "name": "Abilene Modifications",
-      "version": "1.0.0.3",
+      "version": "1.0.0.4",
       "publisher": "SSI"
     },
     {
@@ -63,12 +63,12 @@
       "id": "0d3ace7e-c245-4364-a3dd-52a0cfbae19b",
       "publisher": "Abilene",
       "name": "Table Extensions",
-      "version": "1.0.0.3"
+      "version": "1.0.1.6"
     },
     {
       "id": "c43dcc1b-fb35-45ee-b4d8-d81285435184",
       "name": "Core Item Modification",
-      "version": "1.0.0.1",
+      "version": "1.0.0.10",
       "publisher": "SSI"
     }
   ],
